# fastapi-neon

./: pyproject.toml
fastapi_neon/: main.py  settings.py
